# Dreemchest

./: .gitignore  .gitmodules  README.md  dreemchest  dreemchest.bat  dreemchest.py  setup.py
Source/: CMakeLists.txt
Source/CLI/: bootstrap.py  cmake.py  command_line.py  configure-osx.command  configure.py  main.py  select-project-folder.bat
Source/CLI/command_line/: bootstrap.py  cmake.py  command_line.py  configure.py  env.py  git.py  main.py
Source/CLI/makedata/: __init__.py  actions.py  cache.py  cubemap.py  makedata.py  serializer.py  signature.py  tasks.py
Source/Composer/: CMakeLists.txt  Composer.cpp  Composer.h  FileSystem.cpp  FileSystem.h
Source/Composer/Editors/: AssetEditor.cpp  AssetEditor.h  SceneEditor.cpp  SceneEditor.h  VisualEditor.cpp  VisualEditor.h
Source/Composer/Importers/: AssetImporter.cpp  AssetImporter.h  FileImporter.cpp  FileImporter.h  ImageImporter.cpp  ImageImporter.h  MeshImporter.cpp  MeshImporter.h
Source/Composer/Models/: AbstractTreeModel.cpp  AbstractTreeModel.h  AssetFileSystemModel.cpp  AssetFileSystemModel.h  AssetModels.cpp  EnumerationModel.cpp  EnumerationModel.h  PropertyModel.cpp  PropertyModel.h  SceneModel.cpp  SceneModel.h
Source/Composer/Project/: Assets.cpp  Assets.h  Project.cpp  Project.h
Source/Composer/Systems/: Rendering.cpp  Rendering.h
Source/Composer/Widgets/: Actions.cpp  Actions.h  AssetTree.cpp  AssetTree.h  ComboBox.h  DockIndicator.cpp  DockIndicator.h  DockIndicatorImage.h  Document.cpp  Document.h  EntityInspector.cpp  EntityInspector.h  Inspector.cpp  MainWindow.cpp  MainWindow.h  Menu.cpp  Menu.h  ObjectInspector.cpp  ObjectInspector.h  Output.cpp  Output.h  PropertyInspector.cpp  PropertyInspector.h  RenderingFrame.cpp  RenderingFrame.h  SceneTree.cpp  SceneTree.h
Source/Dreemchest/: BuildConfig.in.h  CMakeLists.txt  Deprecated.h  Dreemchest.h
Source/Dreemchest/Assets/: Asset.cpp  Asset.h  AssetCache.h  AssetHandle.cpp  AssetHandle.h  AssetHandle.hpp  AssetLoadingQueue.cpp  AssetLoadingQueue.h  AssetSource.cpp  AssetSource.h  AssetType.cpp  AssetType.h  Assets.cpp  Assets.h
Source/Dreemchest/Base/: Classes.h  Preprocessor.h
Source/Dreemchest/Ecs/: Ecs.cpp  Ecs.h  EntitySerializer.cpp  EntitySerializer.h
Source/Dreemchest/Font/: FontProvider.cpp
Source/Dreemchest/Fx/: Emitter.cpp  Emitter.h  Fx.h  Modifiers.cpp  Modifiers.h  Modules.cpp  Modules.h  Parameter.cpp  Parameter.h  ParticleSystem.cpp  ParticleSystem.h  Particles.cpp  Particles.h  Renderers.cpp  Renderers.h  Zones.cpp  Zones.h
Source/Dreemchest/Introspection/: Introspection.h  Property.cpp  Property.h  Type.cpp  Type.h  TypeCast.h  Variant.cpp
Source/Dreemchest/Io/: Archive.cpp  Archive.h  DiskFileSystem.cpp  DiskFileSystem.h  FileSystem.cpp  FileSystem.h  Io.h  JsonLoader.cpp  JsonLoader.h  KeyValue.cpp  KeyValue.h  Makefile.py  Path.h
Source/Dreemchest/Mvvm/: Mvvm.h  Value.cpp  Value.h
Source/Dreemchest/Network/: Network.cpp  Network.h
Source/Dreemchest/Platform/: Application.cpp  Application.h  Arguments.cpp  Arguments.h  Input.cpp  Input.h  Platform.h  Time.cpp  Time.h  Window.cpp  Window.h
Source/Dreemchest/Reflection/: Property.h  Reflection.cpp  Reflection.h
Source/Dreemchest/Renderer/: BatchRenderer.cpp  BatchRenderer.h  CommandBuffer.cpp  CommandBuffer.h  Hal.cpp  Hal.h  MetalShaderGenerator.cpp  MetalShaderGenerator.h  PipelineFeatureLayout.cpp  PipelineFeatureLayout.h  RenderFrame.cpp  RenderFrame.h  RenderState.cpp  RenderState.h  RenderStateDeprecated.cpp  RenderStateDeprecated.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RenderingContext.cpp  RenderingContext.h  RenderingContextHal.cpp  RenderingContextHal.h  ShaderFeatureLayout.cpp  ShaderFeatureLayout.h  ShaderLibrary.cpp  ShaderLibrary.h  Ubershader.cpp  Ubershader.h  VertexBufferLayout.cpp  VertexBufferLayout.h  VertexFormat.h
Source/Dreemchest/Scene/: Bindings.cpp  Bindings.h  PlaneClipper.cpp  PlaneClipper.h  Scene.cpp  Scene.h  Viewport.cpp  Viewport.h
Source/Dreemchest/Sound/: Fader.cpp  Sound.h  SoundChannel.cpp  SoundChannel.h  SoundData.cpp  SoundData.h  SoundEvent.h  SoundFx.cpp  SoundFx.h  SoundGroup.cpp  SoundGroup.h  SoundStream.cpp  SoundStream.h
Source/Examples/: 01_HelloWorld.cpp  02_CreatingWindows.cpp  04_RenderingTriangle.cpp  05_Files.cpp  06_BasicNetworking.cpp  07_TCPSockets.cpp  08_NetworkHandlers.cpp  11_Particles.cpp  12_Sound.cpp  13_Scene.cpp  CMakeLists.txt  VisualStudio.user.in
Source/Tests/: ByteBuffer.cpp  CMakeLists.txt  Serialization.cpp  TCPSocket.cpp  Tokenizer.cpp  UnitTests.h  main.cpp
Source/examples/: 01_HelloWorld.cpp  04_RendererInitialization.cpp  08_NetworkHandlers.cpp  13_Scene.cpp
Source/tests/: UnitTests.h
src/: CMakeLists.txt  Common.h  Globals.txt.txt  Makefile.py  Namespace.h  Types.h
src/Composer/: CMakeLists.txt  Composer.cpp  Composer.h  FileSystem.cpp  FileSystem.h  IFileSystem.h  IMimeData.h  MainWindow.cpp  MainWindow.h
src/Composer/UI/: IMenu.h  (+9 more)
src/dreemchest/: CMakeLists.txt  Deprecated.h  Dreemchest.cpp  Dreemchest.h  Makefile.py  Namespace.h  Types.h
src/examples/: 01_HelloWorld.cpp  02_CreatingWindows.cpp  03_WindowEvents.cpp  04_RendererInitialization.cpp  05_Files.cpp  06_BasicNetworking.cpp  07_TCPSockets.cpp  08_NetworkHandlers.cpp  09_ModelViewViewModel.cpp  10_MvvmQt.cpp  11_Particles.cpp  12_Sound.cpp  13_Scene.cpp  CMakeLists.txt  Makefile.py
src/lib/: Color.h  Exception.h  Logger.h  Preprocessor.h  StringHash.h
src/platform/: Application.cpp  Application.h  Platform.h  Window.cpp  Window.h
src/renderer/: BatchRenderer.cpp  BatchRenderer.h  Hal.cpp  Hal.h  RenderState.h  Renderer.h
src/sound/: Fader.cpp  Fader.h  Sound.h  SoundChannel.cpp  SoundChannel.h  SoundData.cpp  SoundData.h  SoundEvent.cpp  SoundEvent.h  SoundFx.cpp  SoundFx.h  SoundGroup.cpp  SoundGroup.h  SoundStream.cpp  SoundStream.h
src/tests/: ByteBuffer.cpp  Makefile.py  Mvvm.cpp  Serialization.cpp  TCPSocket.cpp  UnitTests.h  main.cpp
src/threads/: Mutex.cpp  Mutex.h  Thread.cpp  Thread.h  Threads.h
src/utils/: Exception.h  Logger.h  Preprocessor.h  StringHash.h
(+1486 files in other folders)
